ParChapel.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from ParChapel.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	POpenGraph -> L_POpenGraph                         (1)
	PCloseGraph -> L_PCloseGraph                       (2)
	POpenParenthesis -> L_POpenParenthesis             (3)
	PCloseParenthesis -> L_PCloseParenthesis           (4)
	PSemicolon -> L_PSemicolon                         (5)
	PColon -> L_PColon                                 (6)
	PIf -> L_PIf                                       (7)
	PThen -> L_PThen                                   (8)
	PElse -> L_PElse                                   (9)
	Pdo -> L_Pdo                                       (10)
	PWhile -> L_PWhile                                 (11)
	PInt -> L_PInt                                     (12)
	PReal -> L_PReal                                   (13)
	PAssignmEq -> L_PAssignmEq                         (14)
	PAssignmPlus -> L_PAssignmPlus                     (15)
	PRef -> L_PRef                                     (16)
	PVar -> L_PVar                                     (17)
	PConst -> L_PConst                                 (18)
	PProc -> L_PProc                                   (19)
	PReturn -> L_PReturn                               (20)
	PElthen -> L_PElthen                               (21)
	PEgrthen -> L_PEgrthen                             (22)
	PEplus -> L_PEplus                                 (23)
	PEminus -> L_PEminus                               (24)
	PEtimes -> L_PEtimes                               (25)
	PEdiv -> L_PEdiv                                   (26)
	PEmod -> L_PEmod                                   (27)
	PDef -> L_PDef                                     (28)
	PElor -> L_PElor                                   (29)
	PEland -> L_PEland                                 (30)
	PEeq -> L_PEeq                                     (31)
	PEneq -> L_PEneq                                   (32)
	PEle -> L_PEle                                     (33)
	PEge -> L_PEge                                     (34)
	PIdent -> L_PIdent                                 (35)
	PString -> L_PString                               (36)
	PChar -> L_PChar                                   (37)
	PDouble -> L_PDouble                               (38)
	PInteger -> L_PInteger                             (39)
	Program -> Module                                  (40)
	Module -> ListExt                                  (41)
	ListExt ->                                         (42)
	ListExt -> ListExt Ext                             (43)
	Ext -> Declaration                                 (44)
	Ext -> Function                                    (45)
	Declaration -> DecMode ListDeclList PSemicolon     (46)
	ListDeclList -> DeclList                           (47)
	ListDeclList -> DeclList ',' ListDeclList          (48)
	DeclList -> ListPIdent PColon Type                 (49)
	DeclList -> ListPIdent PAssignmEq Exp              (50)
	DeclList -> ListPIdent PColon Type PAssignmEq Exp   (51)
	ListPIdent -> PIdent                               (52)
	ListPIdent -> PIdent ',' ListPIdent                (53)
	DecMode -> PVar                                    (54)
	DecMode -> PConst                                  (55)
	Function -> PProc Signature Body                   (56)
	Signature -> PIdent FunctionParams                 (57)
	Signature -> PIdent FunctionParams PColon Type     (58)
	FunctionParams -> POpenParenthesis ListParam PCloseParenthesis   (59)
	ListParam ->                                       (60)
	ListParam -> Param                                 (61)
	ListParam -> Param ',' ListParam                   (62)
	Param -> ListPIdent PColon Type                    (63)
	Param -> Mode ListPIdent PColon Type               (64)
	Body -> POpenGraph ListBodyStatement PCloseGraph   (65)
	ListBodyStatement ->                               (66)
	ListBodyStatement -> ListBodyStatement BodyStatement   (67)
	BodyStatement -> Statement                         (68)
	BodyStatement -> Function PSemicolon               (69)
	BodyStatement -> Declaration                       (70)
	BodyStatement -> Body                              (71)
	BodyStatement -> PReturn Exp PSemicolon            (72)
	BodyStatement -> PReturn PSemicolon                (73)
	Statement -> Pdo PWhile Body Guard                 (74)
	Statement -> PWhile Guard Body                     (75)
	Statement -> PIf Guard PThen Body                  (76)
	Statement -> PIf Guard PThen Body PElse Body       (77)
	Statement -> Exp PSemicolon                        (78)
	Guard -> POpenParenthesis Exp PCloseParenthesis    (79)
	Type -> PInt                                       (80)
	Type -> PReal                                      (81)
	AssgnmOp -> PAssignmEq                             (82)
	AssgnmOp -> PAssignmPlus                           (83)
	Mode -> PRef                                       (84)
	Exp -> Exp AssgnmOp Exp4                           (85)
	Exp -> Exp4                                        (86)
	Exp4 -> Exp4 PElor Exp5                            (87)
	Exp4 -> Exp5                                       (88)
	Exp5 -> Exp5 PEland Exp8                           (89)
	Exp5 -> Exp6                                       (90)
	Exp8 -> Exp8 PDef Exp9                             (91)
	Exp8 -> Exp9                                       (92)
	Exp9 -> Exp9 PEeq Exp10                            (93)
	Exp9 -> Exp9 PEneq Exp10                           (94)
	Exp9 -> Exp10                                      (95)
	Exp10 -> Exp10 PElthen Exp11                       (96)
	Exp10 -> Exp10 PEgrthen Exp11                      (97)
	Exp10 -> Exp10 PEle Exp11                          (98)
	Exp10 -> Exp10 PEge Exp12                          (99)
	Exp10 -> Exp11                                     (100)
	Exp12 -> Exp12 PEplus Exp13                        (101)
	Exp12 -> Exp12 PEminus Exp13                       (102)
	Exp12 -> Exp13                                     (103)
	Exp13 -> Exp13 PEtimes Exp14                       (104)
	Exp13 -> Exp13 PEdiv Exp14                         (105)
	Exp13 -> Exp13 PEmod Exp14                         (106)
	Exp13 -> Exp14                                     (107)
	Exp6 -> Exp7                                       (108)
	Exp7 -> Exp8                                       (109)
	Exp11 -> Exp12                                     (110)
	Exp14 -> POpenParenthesis Exp PCloseParenthesis    (111)
	Exp14 -> PIdent                                    (112)
	Exp14 -> Constant                                  (113)
	Exp14 -> PString                                   (114)
	Constant -> PDouble                                (115)
	Constant -> PChar                                  (116)
	Constant -> PInteger                               (117)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	','            { PT _ (TS _ 1) }
	L_POpenGraph   { PT _ (T_POpenGraph _) }
	L_PCloseGraph  { PT _ (T_PCloseGraph _) }
	L_POpenParenthesis{ PT _ (T_POpenParenthesis _) }
	L_PCloseParenthesis{ PT _ (T_PCloseParenthesis _) }
	L_PSemicolon   { PT _ (T_PSemicolon _) }
	L_PColon       { PT _ (T_PColon _) }
	L_PIf          { PT _ (T_PIf _) }
	L_PThen        { PT _ (T_PThen _) }
	L_PElse        { PT _ (T_PElse _) }
	L_Pdo          { PT _ (T_Pdo _) }
	L_PWhile       { PT _ (T_PWhile _) }
	L_PInt         { PT _ (T_PInt _) }
	L_PReal        { PT _ (T_PReal _) }
	L_PAssignmEq   { PT _ (T_PAssignmEq _) }
	L_PAssignmPlus { PT _ (T_PAssignmPlus _) }
	L_PRef         { PT _ (T_PRef _) }
	L_PVar         { PT _ (T_PVar _) }
	L_PConst       { PT _ (T_PConst _) }
	L_PProc        { PT _ (T_PProc _) }
	L_PReturn      { PT _ (T_PReturn _) }
	L_PElthen      { PT _ (T_PElthen _) }
	L_PEgrthen     { PT _ (T_PEgrthen _) }
	L_PEplus       { PT _ (T_PEplus _) }
	L_PEminus      { PT _ (T_PEminus _) }
	L_PEtimes      { PT _ (T_PEtimes _) }
	L_PEdiv        { PT _ (T_PEdiv _) }
	L_PEmod        { PT _ (T_PEmod _) }
	L_PDef         { PT _ (T_PDef _) }
	L_PElor        { PT _ (T_PElor _) }
	L_PEland       { PT _ (T_PEland _) }
	L_PEeq         { PT _ (T_PEeq _) }
	L_PEneq        { PT _ (T_PEneq _) }
	L_PEle         { PT _ (T_PEle _) }
	L_PEge         { PT _ (T_PEge _) }
	L_PIdent       { PT _ (T_PIdent _) }
	L_PString      { PT _ (T_PString _) }
	L_PChar        { PT _ (T_PChar _) }
	L_PDouble      { PT _ (T_PDouble _) }
	L_PInteger     { PT _ (T_PInteger _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	POpenGraph      rule  1
	PCloseGraph     rule  2
	POpenParenthesis rule  3
	PCloseParenthesis rule  4
	PSemicolon      rule  5
	PColon          rule  6
	PIf             rule  7
	PThen           rule  8
	PElse           rule  9
	Pdo             rule  10
	PWhile          rule  11
	PInt            rule  12
	PReal           rule  13
	PAssignmEq      rule  14
	PAssignmPlus    rule  15
	PRef            rule  16
	PVar            rule  17
	PConst          rule  18
	PProc           rule  19
	PReturn         rule  20
	PElthen         rule  21
	PEgrthen        rule  22
	PEplus          rule  23
	PEminus         rule  24
	PEtimes         rule  25
	PEdiv           rule  26
	PEmod           rule  27
	PDef            rule  28
	PElor           rule  29
	PEland          rule  30
	PEeq            rule  31
	PEneq           rule  32
	PEle            rule  33
	PEge            rule  34
	PIdent          rule  35
	PString         rule  36
	PChar           rule  37
	PDouble         rule  38
	PInteger        rule  39
	Program         rule  40
	Module          rule  41
	ListExt         rules 42, 43
	Ext             rules 44, 45
	Declaration     rule  46
	ListDeclList    rules 47, 48
	DeclList        rules 49, 50, 51
	ListPIdent      rules 52, 53
	DecMode         rules 54, 55
	Function        rule  56
	Signature       rules 57, 58
	FunctionParams  rule  59
	ListParam       rules 60, 61, 62
	Param           rules 63, 64
	Body            rule  65
	ListBodyStatement rules 66, 67
	BodyStatement   rules 68, 69, 70, 71, 72, 73
	Statement       rules 74, 75, 76, 77, 78
	Guard           rule  79
	Type            rules 80, 81
	AssgnmOp        rules 82, 83
	Mode            rule  84
	Exp             rules 85, 86
	Exp4            rules 87, 88
	Exp5            rules 89, 90
	Exp8            rules 91, 92
	Exp9            rules 93, 94, 95
	Exp10           rules 96, 97, 98, 99, 100
	Exp12           rules 101, 102, 103
	Exp13           rules 104, 105, 106, 107
	Exp6            rule  108
	Exp7            rule  109
	Exp11           rule  110
	Exp14           rules 111, 112, 113, 114
	Constant        rules 115, 116, 117

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram -> . Program                        (rule 0)

	L_PVar         reduce using rule 42
	L_PConst       reduce using rule 42
	L_PProc        reduce using rule 42
	%eof           reduce using rule 42

	Program        goto state 3
	Module         goto state 4
	ListExt        goto state 5

State 1

	POpenGraph -> . L_POpenGraph                        (rule 1)

	L_POpenGraph   shift, and enter state 2


State 2

	POpenGraph -> L_POpenGraph .                        (rule 1)

	L_POpenGraph   reduce using rule 1
	L_PCloseGraph  reduce using rule 1
	L_POpenParenthesisreduce using rule 1
	L_PIf          reduce using rule 1
	L_Pdo          reduce using rule 1
	L_PWhile       reduce using rule 1
	L_PVar         reduce using rule 1
	L_PConst       reduce using rule 1
	L_PProc        reduce using rule 1
	L_PReturn      reduce using rule 1
	L_PIdent       reduce using rule 1
	L_PString      reduce using rule 1
	L_PChar        reduce using rule 1
	L_PDouble      reduce using rule 1
	L_PInteger     reduce using rule 1


State 3

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 4

	Program -> Module .                                 (rule 40)

	%eof           reduce using rule 40


State 5

	Module -> ListExt .                                 (rule 41)
	ListExt -> ListExt . Ext                            (rule 43)

	L_PVar         shift, and enter state 13
	L_PConst       shift, and enter state 14
	L_PProc        shift, and enter state 15
	%eof           reduce using rule 41

	PVar           goto state 6
	PConst         goto state 7
	PProc          goto state 8
	Ext            goto state 9
	Declaration    goto state 10
	DecMode        goto state 11
	Function       goto state 12

State 6

	DecMode -> PVar .                                   (rule 54)

	L_PIdent       reduce using rule 54


State 7

	DecMode -> PConst .                                 (rule 55)

	L_PIdent       reduce using rule 55


State 8

	Function -> PProc . Signature Body                  (rule 56)

	L_PIdent       shift, and enter state 20

	PIdent         goto state 21
	Signature      goto state 22

State 9

	ListExt -> ListExt Ext .                            (rule 43)

	L_PVar         reduce using rule 43
	L_PConst       reduce using rule 43
	L_PProc        reduce using rule 43
	%eof           reduce using rule 43


State 10

	Ext -> Declaration .                                (rule 44)

	L_PVar         reduce using rule 44
	L_PConst       reduce using rule 44
	L_PProc        reduce using rule 44
	%eof           reduce using rule 44


State 11

	Declaration -> DecMode . ListDeclList PSemicolon    (rule 46)

	L_PIdent       shift, and enter state 20

	PIdent         goto state 16
	ListDeclList   goto state 17
	DeclList       goto state 18
	ListPIdent     goto state 19

State 12

	Ext -> Function .                                   (rule 45)

	L_PVar         reduce using rule 45
	L_PConst       reduce using rule 45
	L_PProc        reduce using rule 45
	%eof           reduce using rule 45


State 13

	PVar -> L_PVar .                                    (rule 17)

	L_PIdent       reduce using rule 17


State 14

	PConst -> L_PConst .                                (rule 18)

	L_PIdent       reduce using rule 18


State 15

	PProc -> L_PProc .                                  (rule 19)

	L_PIdent       reduce using rule 19


State 16

	ListPIdent -> PIdent .                              (rule 52)
	ListPIdent -> PIdent . ',' ListPIdent               (rule 53)

	','            shift, and enter state 35
	L_PColon       reduce using rule 52
	L_PAssignmEq   reduce using rule 52


State 17

	Declaration -> DecMode ListDeclList . PSemicolon    (rule 46)

	L_PSemicolon   shift, and enter state 34

	PSemicolon     goto state 33

State 18

	ListDeclList -> DeclList .                          (rule 47)
	ListDeclList -> DeclList . ',' ListDeclList         (rule 48)

	','            shift, and enter state 32
	L_PSemicolon   reduce using rule 47


State 19

	DeclList -> ListPIdent . PColon Type                (rule 49)
	DeclList -> ListPIdent . PAssignmEq Exp             (rule 50)
	DeclList -> ListPIdent . PColon Type PAssignmEq Exp    (rule 51)

	L_PColon       shift, and enter state 30
	L_PAssignmEq   shift, and enter state 31

	PColon         goto state 28
	PAssignmEq     goto state 29

State 20

	PIdent -> L_PIdent .                                (rule 35)
